--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
+    "composite": true,
     "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "esnext",
+      "WebWorker",
+      "WebWorker.ImportScripts"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -19,7 +22,5 @@
     "noEmit": true,
     "jsx": "react"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
